Update score header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <div class="container">
             <div class="scoreboard">
-                    <h3>HOME</h3>
+                    <h3>GUEST</h3>
                     <h2 id="home-scorepoints">0</h2>
                 <div class="buttongroup">
                     <button onclick="home1()">+1</button>
@@ -17,7 +17,7 @@
             <button id="clearbtn" onclick="reset()">clear</button>
             </div>
                 <div class="scoreboard">
-                    <h3>GUEST</h3>
+                    <h3>AWAY</h3>
                     <h2 id="guest-scorepoints">0</h2>
                     <div class="buttongroup">
                     <button onclick="guest1()">+1</button>
